# ElaboratoLaboratorio

./: .gitignore  BankAccount.cpp  BankAccount.h  CMakeLists.txt  Interface.cpp  Interface.h  README.txt  Transaction.cpp  Transaction.h  User.cpp  User.h  main.cpp
Tests/: testBankAccount.cpp  testTransaction.cpp  testUser.cpp
